# youtube-crawler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: config.toml
youtube_crawler/: rikunabi_crawler.py  youtube_crawler.py
youtube_crawler/parser/: parse_channel_detail.py  parse_channel_list.py  parse_recruit_detail.py  parse_recruit_list.py  parse_recruit_search_condition_list.py
youtube_crawler/schema/v1/: rikunabi_company.py  rikunabi_recruit.py
