[tool.poetry]
name = "rikunabi_crawler"
version = "0.1.0"
description = "doda crawler"
authors = ["Theinfitech <contact@theinfitech.com>"]

[tool.poetry.dependencies]
python = "^3.9.16"
jsonpath-ng = "^1.5.3"
playwright = "^1.42.0"

[tool.poetry.dev-dependencies]
salesnext-crawler = { git = "git@github.com:SalesNext/salesnext-crawler.git", branch = "event" }
pre-commit = "^2.21.0"
black = "^22.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "I",
    "C90",
    "UP",
    "N",
    "C4",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
]
ignore = ['N812', 'N817', 'C901', 'UP007', 'PLR0912', 'PLR0915']
target-version = "py39"
line-length = 120
fix = true

[tool.mypy]
strict = true
disable_error_code = ['literal-required']

[[tool.mypy.overrides]]
module = "scrapy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath_ng.*"
ignore_missing_imports = true
